chore: Add frontend dependencies.

--- a/ai-cv-suite/backend/requirements.txt
+++ b/ai-cv-suite/backend/requirements.txt
@@ -17,6 +17,9 @@ httpx==0.26.0
 aiofiles==23.2.1
 pydantic==2.5.3
 
+# Image Processing
+Pillow==10.2.0
+
 # Testing
 pytest==7.4.4
 pytest-asyncio==0.23.3
