--- a/ai-cv-suite/backend/.env.example
+++ b/ai-cv-suite/backend/.env.example
@@ -1,16 +1,32 @@
-# LLM Provider: "openai" or "gemini"
-LLM_PROVIDER=openai
+# ============================================
+# AI CV Suite - Environment Configuration
+# ============================================
+# COPY this file to .env and fill in your real API keys
+# NEVER commit .env to git - only this .env.example file
+# ============================================
 
-# OpenAI API Key (if using openai provider)
-OPENAI_API_KEY=sk-your-key-here
+# --------------------------------------------
+# LLM Provider Configuration (OpenRouter)
+# --------------------------------------------
+# Get your API key from: https://openrouter.ai/keys
+OPENROUTER_API_KEY=your-openrouter-api-key-here
 
-# Google Gemini API Key (if using gemini provider)
-GEMINI_API_KEY=AIza-your-key-here
+# Default LLM model (can be changed in the UI)
+# Options: google/gemini-2.0-flash-exp:free, anthropic/claude-3.5-sonnet, openai/gpt-4-turbo, meta-llama/llama-3.1-70b-instruct, etc.
+DEFAULT_LLM_MODEL=google/gemini-2.0-flash-exp:free
 
-# Nano Banana Image API (mock mode by default)
-NANO_BANANA_API_KEY=
-NANO_BANANA_MOCK=true
+# --------------------------------------------
+# Image Generation (Krea API)
+# --------------------------------------------
+# Get your API key from: https://krea.ai
+KREA_API_KEY=your-krea-api-key-here
 
+# Default image model (can be changed in the UI)
+# Options: flux, krea-1, flux-1-krea, z-image, seedream-3, imagen-4-fast, etc.
+DEFAULT_IMAGE_MODEL=flux
+
+# --------------------------------------------
 # Server Settings
+# --------------------------------------------
 HOST=0.0.0.0
 PORT=8000
