--- a/ai-cv-suite/backend/requirements.txt
+++ b/ai-cv-suite/backend/requirements.txt
@@ -3,8 +3,8 @@ fastapi==0.109.0
 uvicorn[standard]==0.27.0
 python-multipart==0.0.6
 
-# PDF Generation
-weasyprint==60.2
+# PDF Generation (using Playwright - works on Windows without GTK)
+playwright==1.41.0
 jinja2==3.1.2
 
 # AI Services
