--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "description": "AI-powered CV/Resume generation suite",
     "scripts": {
-        "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
+        "dev": "python run.py",
         "dev:backend": "cd backend && .\\venv\\Scripts\\uvicorn app.main:app --reload --host 0.0.0.0 --port 8001",
         "dev:frontend": "cd frontend && npm run dev",
         "install:all": "cd backend && pip install -r requirements.txt && cd ../frontend && npm install"
