--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,19 +10,21 @@
         "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
     },
     "dependencies": {
+        "@radix-ui/react-label": "^2.0.2",
+        "@radix-ui/react-popover": "^1.1.15",
+        "@radix-ui/react-progress": "^1.0.3",
+        "@radix-ui/react-select": "^2.0.0",
+        "@radix-ui/react-slider": "^1.1.2",
+        "@radix-ui/react-slot": "^1.0.2",
+        "axios": "^1.6.5",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.0",
+        "lucide-react": "^0.312.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "axios": "^1.6.5",
-        "zustand": "^4.5.0",
-        "lucide-react": "^0.312.0",
-        "clsx": "^2.1.0",
+        "sonner": "^2.0.7",
         "tailwind-merge": "^2.2.0",
-        "class-variance-authority": "^0.7.0",
-        "@radix-ui/react-slot": "^1.0.2",
-        "@radix-ui/react-slider": "^1.1.2",
-        "@radix-ui/react-select": "^2.0.0",
-        "@radix-ui/react-label": "^2.0.2",
-        "@radix-ui/react-progress": "^1.0.3"
+        "zustand": "^4.5.0"
     },
     "devDependencies": {
         "@types/react": "^18.2.48",
