feat: Add backend environment configuration example and frontend generation state management store.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -22,8 +22,8 @@ DEFAULT_LLM_MODEL=google/gemini-2.0-flash-exp:free
 KREA_API_KEY=your-krea-api-key-here
 
 # Default image model (can be changed in the UI)
-# Options: flux, krea-1, flux-1-krea, z-image, seedream-3, imagen-4-fast, etc.
-DEFAULT_IMAGE_MODEL=flux
+# Valid options: bfl/flux-1-dev, seedream-3, seedream-4, imagen-4-fast, imagen-4, flux-1.1-pro, ideogram-3
+DEFAULT_IMAGE_MODEL=bfl/flux-1-dev
 
 # --------------------------------------------
 # Server Settings
