--- a/vercel.json
+++ b/vercel.json
@@ -1,29 +1,17 @@
 {
     "version": 2,
-    "builds": [
+    "buildCommand": "cd frontend && npm install && npm run build",
+    "outputDirectory": "frontend/dist",
+    "rewrites": [
         {
-            "src": "api/index.py",
-            "use": "@vercel/python"
-        },
-        {
-            "src": "frontend/package.json",
-            "use": "@vercel/static-build",
-            "config": {
-                "distDir": "dist"
-            }
+            "source": "/api/:path*",
+            "destination": "/api/index.py"
         }
     ],
-    "routes": [
-        {
-            "src": "/api/(.*)",
-            "dest": "/api/index.py"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "/frontend/$1"
+    "functions": {
+        "api/index.py": {
+            "runtime": "@vercel/python@4.0.0",
+            "maxDuration": 60
         }
-    ],
-    "env": {
-        "PYTHONPATH": "backend"
     }
 }
